--- a/lyrics_testing.ipynb
+++ b/lyrics_testing.ipynb
@@ -38,7 +38,7 @@
     "from nltk.tokenize import word_tokenize\n",
     "\n",
     "lyrics = df['lyrics']\n",
-    "sWords = stopwords.words('english') + stopwords.words('spanish')\n",
+    "sWords = stopwords.words('english')\n",
     "sWords.extend(('got', 'get', 'gets' 'getting', '2X', '2x', 'x2', 'x3', 'x4', 'x2chorus', 'chorus', 'verse', 'bridge', 'd\\xe3', 'n\\xe3', 'm\\xe3', 'the', 'it', 'is', \"it's\", 'are', 'were', 'a', 'an', 'its', 'of', 'for'))\n",
     "\n",
     "tfidfconverter = TfidfVectorizer(norm='l2', use_idf=True, smooth_idf=True, ngram_range = (1,2), max_features=1000, min_df=3, max_df=0.7, stop_words=sWords)\n",
